# RRT

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: recursive_gemma_2b.yaml  relaxed_recursive_gemma_2b.yaml  test_small.yaml
scripts/: convert.py  demo.py  evaluate.py  profile.py
src/: __init__.py
src/conversion/: __init__.py  convert_gemma.py  svd_init.py  weight_init.py
src/evaluation/: __init__.py  efficiency.py  perplexity.py
src/inference/: __init__.py  depth_wise_batching.py  early_exit.py  kv_cache.py
src/model/: __init__.py  config.py  layers.py  lora.py  recursive_block.py  relaxed_recursive_transformer.py
src/utils/: __init__.py  checkpoint.py  config_utils.py
tests/: __init__.py  conftest.py  test_conversion.py  test_early_exit.py  test_layers.py  test_lora.py  test_recursive_block.py  test_svd_init.py
